syntax = "proto3";

message TokenRequest {
  string userId = 1;
  string token = 2;
}

message TokenResponse {
  bool isValid = 1;
  string message = 2;
}

service TokenValidationService {
  rpc validateToken(TokenRequest) returns (TokenResponse);
}